changes for deployment

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.datasource.url=${DB_URL}
-spring.datasource.username=${DB_USRNAME}
-spring.datasource.password=${DB_PW}
+spring.datasource.username=
+spring.datasource.password=
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.hibernate.show-sql=true
 
