--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,12 @@
-spring.datasource.url=${DB_URL}   
-spring.datasource.username=
-spring.datasource.password=
-spring.jpa.database-platform = org.hibernate.dialect.PostgreSQLDialect
-spring.jpa.hibernate.ddl-auto = none
+spring.datasource.url=${DB_URL}
+spring.datasource.username=${DB_USRNAME}
+spring.datasource.password=${DB_PW}
+spring.jpa.hibernate.ddl-auto=none
 spring.jpa.hibernate.show-sql=true
 
+## Hibernate Properties
+# The SQL dialect makes Hibernate generate better SQL for the chosen database
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDialect
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 
 app.version=1.0.0
